@@ -4,34 +4,23 @@ import no.nav.dolly.domain.resultset.arenaforvalter.ArenaBruker;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyBruker;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukere;
 import no.nav.dolly.elastic.BestillingElasticRepository;
+import no.nav.dolly.libs.nais.DollySpringBootTest;
 import no.nav.testnav.libs.securitycore.domain.AccessToken;
 import no.nav.testnav.libs.securitycore.domain.ServerProperties;
 import no.nav.testnav.libs.standalone.servletsecurity.exchange.TokenExchange;
 import org.hamcrest.CoreMatchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentMatchers;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import reactor.core.publisher.Mono;
 
 import java.util.List;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
-import static com.github.tomakehurst.wiremock.client.WireMock.delete;
-import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
-import static com.github.tomakehurst.wiremock.client.WireMock.get;
-import static com.github.tomakehurst.wiremock.client.WireMock.ok;
-import static com.github.tomakehurst.wiremock.client.WireMock.post;
-import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
-import static com.github.tomakehurst.wiremock.client.WireMock.urlPathMatching;
+import static com.github.tomakehurst.wiremock.client.WireMock.*;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -39,10 +28,7 @@ import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-@ActiveProfiles("test")
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-@TestPropertySource(locations = "classpath:application.yml")
+@DollySpringBootTest
 @AutoConfigureWireMock(port = 0)
 class ArenaForvalterConsumerTest {
 
@@ -75,7 +61,8 @@ class ArenaForvalterConsumerTest {
 
         stubDeleteArenaForvalterBruker();
 
-        var response = arenaForvalterConsumer.deleteIdenter(List.of(IDENT)).collectList().block();
+        /*var response = */
+        arenaForvalterConsumer.deleteIdenter(List.of(IDENT)).collectList().block();
 
         verify(tokenService).exchange(ArgumentMatchers.any(ServerProperties.class));
     }
@@ -92,8 +79,8 @@ class ArenaForvalterConsumerTest {
                         .collectList()
                         .block();
 
-        assertThat(response.get(0).getArbeidsokerList().get(0).getStatus(), is(CoreMatchers.equalTo(ArenaBruker.BrukerStatus.OK)));
-        assertThat(response.get(0).getNyBrukerFeilList(), is(emptyList()));
+        assertThat(response.getFirst().getArbeidsokerList().getFirst().getStatus(), is(CoreMatchers.equalTo(ArenaBruker.BrukerStatus.OK)));
+        assertThat(response.getFirst().getNyBrukerFeilList(), is(emptyList()));
     }
 
     @Test
